# merces1-x402

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Readme.md  clone.py  create_files.sh  deny.toml  docker-compose.prod.yml  docker-compose.test.yml  justfile  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: audit.yml  build-docker.yml  contract_test.yml  rust_lint.yml  rust_test.yml
circom/: circuits.circom
circom/artifacts/: client_verification_key.json  server_verification_key.json
circom/main/: client.circom  client_compressed.circom  server.circom
circom/r1cs/: client.r1cs  client_compressed.r1cs
circom/taceolib/: babyjubjub.circom  commit.circom  compression.circom  encryption.circom  merces.circom  pedersen.circom  poseidon2.circom  poseidon2_constants.circom  precomputations.circom  range.circom  secret_sharing.circom
client/: Cargo.toml
client/benches/: proofs.rs
client/src/: lib.rs  transfer.rs  transfer_compressed.rs
client/src/circom/: config.rs
client/src/cryptography/: mod.rs
contract-rs/: Cargo.toml
contract-rs/src/: environment.rs  lib.rs  merces.rs  token.rs
contract-rs/src/verifiers/: client.rs  server.rs
contracts/: foundry.toml  remappings.txt
contracts/json/: ActionQueue.json  BabyJubJub.json  Merces.json  Poseidon2.json  USDCToken.json  VerifierClient.json  VerifierServer.json
contracts/script/: DeployMerces.s.sol  DeployToken.s.sol
contracts/src/: ActionQueue.sol  Merces.sol  Poseidon2.sol  Token.sol
contracts/src/verifiers/: VerifierClient.sol  VerifierServer.sol
contracts/test/: ActionQueue.t.sol
e2e/: Cargo.toml
e2e/src/: deployer.rs  keys.rs  lib.rs  mpc.rs  proving_keys.rs  user.rs  wallets.rs
mpc-nodes/: Cargo.toml
mpc-nodes/src/: lib.rs  map.rs  process_map.rs
mpc-nodes/src/circom/: config.rs  groth16.rs  mod.rs
taceo-merces1-client/: Cargo.toml
taceo-merces1-client-js/: client.wasm  merces.json  package-lock.json  package.json  tsconfig.json
taceo-merces1-client-js/src/: index.ts
taceo-merces1-client/src/: config.rs  lib.rs  main.rs
taceo-merces1-faucet/: Cargo.toml
taceo-merces1-faucet/src/: api.rs  config.rs  lib.rs  main.rs
taceo-merces1-faucet/static/: index.html
taceo-merces1-node/: Cargo.toml
taceo-merces1-node/migrations/: 20260421101900_init.down.sql  20260421101900_init.up.sql  20260505120000_transactions.down.sql  20260505120000_transactions.up.sql
taceo-merces1-node/src/: api.rs  config.rs  db.rs  lib.rs  main.rs
taceo-merces1-react-app/: next.config.ts  package-lock.json  package.json
taceo-merces1-react-app/src/components/: CardStackSlider.tsx  Footer.tsx  PublicBalanceCard.tsx  card-stack-slider.module.css
taceo-merces1-react-app/src/config/: wagmi.ts
taceo-merces1-react-app/src/pages/: _app.tsx  _document.tsx  index.tsx
taceo-merces1-react-app/src/styles/: card-gradients.module.css
taceo-merces1-x402/: Cargo.toml  README.md
taceo-merces1-x402-facilitator/: Cargo.toml
taceo-merces1-x402-facilitator/src/: config.rs  lib.rs  main.rs
taceo-merces1-x402-js/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
taceo-merces1-x402-js/examples/: client.ts  server.ts
taceo-merces1-x402-js/src/: index.ts  types.ts
taceo-merces1-x402-js/src/client/: index.ts  register.ts  scheme.ts
taceo-merces1-x402-js/src/server/: index.ts  register.ts  scheme.ts
taceo-merces1-x402-react-app/: next.config.ts  package-lock.json  package.json
taceo-merces1-x402-react-app/src/components/: ErrorDialog.tsx  FaucetButton.tsx  MetaMaskMobileToast.tsx  PayButton.tsx  PaymentResultDialog.tsx  PriceTierSelect.tsx  PrivateBalanceCard.tsx  RequestFlowStepper.tsx  Sidebar.tsx  SpinnerButton.tsx  TierBarChart.tsx  TooltipWrapper.tsx  TxTable.tsx  WalletButton.tsx  X402ModeToggle.tsx
taceo-merces1-x402-react-app/src/config/: wagmi.ts
taceo-merces1-x402-react-app/src/lib/: api.ts  constants.ts  utils.ts
taceo-merces1-x402-react-app/src/pages/: _app.tsx  _document.tsx  client.tsx  index.tsx  intro.tsx  server.tsx
taceo-merces1-x402-react-app/src/styles/: card-gradients.module.css  globals.css
taceo-merces1-x402-server/: Cargo.toml
taceo-merces1-x402-server/src/: config.rs  lib.rs  main.rs
taceo-merces1-x402/examples/: client.rs  server.rs
taceo-merces1-x402/src/: client.rs  facilitator.rs  lib.rs  server.rs  types.rs
x402-demo/: .gitignore  README.md  agent.ts  deploy.ts  facilitator.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  start-local.sh  tsconfig.json
