[package]
name = "contract-rs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = ["full", "node-bindings", "rpc"] }
ark-babyjubjub.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
eyre.workspace = true
groth16-sol.workspace = true
serde_json.workspace = true
tracing.workspace = true
