[package]
name = "e2e"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "e2e"

[dependencies]
alloy = { workspace = true, features = ["full", "node-bindings", "rpc"] }
ark-babyjubjub.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
clap.workspace = true
client.workspace = true
contract-rs.workspace = true
eyre.workspace = true
groth16-material.workspace = true
groth16-sol.workspace = true
itertools.workspace = true
mpc-net = { workspace = true, features = ["local"] }
mpc-nodes.workspace = true
rand.workspace = true
rand_chacha.workspace = true
secrecy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
