[package]
name = "mpc-nodes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
circom-mpc-vm.workspace = true
circom-proof-schema.workspace = true
co-circom.workspace = true
eyre.workspace = true
itertools.workspace = true
mpc-core.workspace = true
mpc-net.workspace = true
num-bigint.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true
