[package]
name = "mpc-nodes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy.workspace = true
ark-babyjubjub.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
ark-groth16.workspace = true
ark-serialize.workspace = true
circom-mpc-vm.workspace = true
circom-proof-schema.workspace = true
client = { path = "../client", version = "0.1" }
co-circom.workspace = true
contract-rs = { path = "../contract-rs", version = "0.1" }
eyre.workspace = true
itertools.workspace = true
mpc-core.workspace = true
mpc-net = { workspace = true, features = ["local"] }
num-bigint.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
taceo-circom-types = { workspace = true, features = ["groth16", "zkey"] }
tracing.workspace = true
