[package]
name = "taceo-merces1-faucet"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws",
] }
ark-babyjubjub.workspace = true
axum.workspace = true
client = { path = "../client", version = "0.1" }
config = { workspace = true }
contract-rs = { path = "../contract-rs", version = "0.1" }
eyre.workspace = true
groth16-material.workspace = true
humantime-serde.workspace = true
rand_chacha.workspace = true
rustls.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
taceo-nodes-common = { workspace = true, features = [
  "api",
  "serde",
  "web3",
] }
taceo-nodes-observability.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "set-header", "trace"] }
tracing.workspace = true
