[package]
name = "taceo-merces1-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws",
] }
ark-babyjubjub.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
axum.workspace = true
config = { workspace = true }
contract-rs = { path = "../contract-rs", version = "0.1" }
eyre.workspace = true
humantime-serde.workspace = true
mpc-core.workspace = true
mpc-net = { workspace = true, features = ["tcp-session"] }
mpc-nodes = { path = "../mpc-nodes", version = "0.1" }
rustls.workspace = true
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
taceo-nodes-common = { workspace = true, features = [
  "api",
  "postgres",
  "serde",
  "web3"
] }
taceo-nodes-observability.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http = { workspace = true, features = ["set-header", "trace"] }
tracing.workspace = true
